--- a/loucuras/painelLogin/index.html
+++ b/loucuras/painelLogin/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Panel Login</title>
+    <title>Painel de Login</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="main-login">
         <div class="left-login">
             <h1>Faça Login<br>E entre para o nosso time!</h1>
-            <img src="animação/astronauta.svg" class="left-login-image" alt="Animação Astronauta">
+            <img src="animação/login.svg" class="left-login-image" alt="Animação Astronauta">
         </div>
         <div class="right-login">
             <div class="card-login">
@@ -23,7 +23,15 @@
                     <label for="senha">Senha</label>
                     <input type="password" name="senha" id="senha" placeholder="Senha">
                 </div>
-                <button class="btn-login">Login</button>
+                <button class="btn-login" onclick="logar()">Login</button>
+                <div>
+                    <label for="registrar" class="registrar">
+                        Clique para se <a href="registrar/registrar.html">Registrar</a>
+                    </label>
+                </div>
+                <div class="resultado">
+                    <label for="resultado">&check; Login feito com sucesso!</label>
+                </div>
             </div>
         </div>
     </div>
