Painel de Login em andamente!

--- a/loucuras/painelLogin/index.html
+++ b/loucuras/painelLogin/index.html
@@ -30,7 +30,7 @@
                     </label>
                 </div>
                 <div class="resultado">
-                    <label for="resultado">&check; Login feito com sucesso!</label>
+                    <label for="resultado"></label>
                 </div>
             </div>
         </div>
