Painel de Login em andamente!

--- a/loucuras/painelLogin/registrar/registrar.html
+++ b/loucuras/painelLogin/registrar/registrar.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel de Resgistro</title>
     <link rel="stylesheet" href="resgistrar.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="main-reg">
@@ -22,6 +23,7 @@
                 <div class="textfield">
                     <label for="senha">Senha</label>
                     <input type="password" name="senha-reg" id="senha-reg" placeholder="Senha">
+                    <i id="olho" class="bi bi-eye-fill" onclick="olhoureg()"></i>
                 </div>
                 <button class="btn-reg" onclick="registrou()">Registrar</button>
                 <div>
