--- a/loucuras/painelLogin/index.html
+++ b/loucuras/painelLogin/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Painel de Login</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
 </head>
 <body>
     <div class="main-login">
@@ -22,6 +23,7 @@
                 <div class="textfield">
                     <label for="senha">Senha</label>
                     <input type="password" name="senha" id="senha" placeholder="Senha">
+                    <i id="olho" class="bi bi-eye-fill" onclick="olhou()"></i>
                 </div>
                 <button class="btn-login" onclick="logar()">Login</button>
                 <div>
