--- a/loucuras/System_Cripto/registrar/registrar.html
+++ b/loucuras/System_Cripto/registrar/registrar.html
@@ -32,7 +32,7 @@
                     </label>
                 </div>
                 <div class="resultado">
-                    <label for="resultado">&check; Registro feito com sucesso!</label>
+                    <label for="resultado"></label>
                 </div>
             </div>
         </div>
