--- a/.../.../.../Pedido de namoro/index.html
+++ b/.../.../.../Pedido de namoro/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Quer Namorar Comigo?</h1>
-    <button id="Sim" onclick="sim()">Sim</button>
-    <button id="Nao" onmousemove="desvia(this)">Não</button>
-    <script src="script.js"></script>
+    <div class="Main">
+        <h1>Quer Namorar Comigo?</h1>
+        <button id="Sim" onclick="sim()">💝 Sim 💝</button>
+        <button id="Nao" onmousemove="desvia(this)">💔 Não 💔</button>
+        <script src="script.js"></script>  
+    </div>
+
 </body>
 </html>
